feat: Add verbatium-proc-macro
This is the simplest proc-macro I could think of that does something
with it's input TokenStream.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,12 @@ publish = false
 [workspace]
 members = [
     "derive-macro",
+    "verbatium-proc-macro"
 ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 derive-macro = { path = "derive-macro" }
+verbatium-proc-macro = { path = "verbatium-proc-macro" }
 
