refactor: Rename the sub-modules
 - derive-macro => proc-macro-derive-describe
 - verbatim-proc-macro => proc-macro-verbatim
 - expr-binary => proc-macro-expr-

Added "extra-traits" feature and renamed expr_binary_dbg_not_working
to expr_binary_dbg_not_working as that is how you get Debug trait added
to the syn structures.

Added some comments that show `parse_macro_input()` generates nice
error messages.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,14 @@ license = "MIT OR Apache-2.0"
 
 [workspace]
 members = [
-    "derive-macro",
-    "verbatim-proc-macro",
-    "expr-binary",
+    "proc-macro-derive-describe",
+    "proc-macro-verbatim",
+    "proc-macro-expr-binary",
 ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-derive-macro = { path = "derive-macro" }
-verbatim-proc-macro = { path = "verbatim-proc-macro" }
-expr-binary = { path = "expr-binary" }
+proc-macro-derive-describe = { path = "proc-macro-derive-describe" }
+proc-macro-verbatim = { path = "proc-macro-verbatim" }
+proc-macro-expr-binary = { path = "proc-macro-expr-binary" }
