--- a/proc-macro-derive-using-parse/Cargo.toml
+++ b/proc-macro-derive-using-parse/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "verbatim-proc-macro"
+name = "derive-macro-using-parse"
 version = "0.1.0"
 edition = "2021"
 
@@ -10,3 +10,4 @@ proc-macro = true
 syn = { version = "1.0", features = ["full"] }
 quote = "1.0"
 proc-macro2 = "1.0"
+
