--- a/proc-macro-derive-describe/Cargo.toml
+++ b/proc-macro-derive-describe/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "derive-macro"
-version = "0.1.0"
+name = "proc-macro-derive-describe"
+version = "0.2.0"
 edition = "2021"
 
 [lib]
