--- a/proc-macro-nesting/Cargo.toml
+++ b/proc-macro-nesting/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "proc-macro-derive-using-parse"
+name = "proc-macro-nesting"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,7 +7,6 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-syn = { version = "1.0", features = ["full"] }
+syn = { version = "1.0", features = ["extra-traits", "full"] }
 quote = "1.0"
 proc-macro2 = "1.0"
-
