--- a/proc-macro-fsm1/Cargo.toml
+++ b/proc-macro-fsm1/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-syn = { version = "1.0", features = ["extra-traits", "full", "parsing"] }
+syn = { version = "1.0", features = ["extra-traits", "full", "parsing", "visit"] }
 quote = "1.0"
 proc-macro2 = "1.0"
+lazy_static = "1.4.0"
