--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "proc-macro-expr-binary",
     "proc-macro-nesting",
     "proc-macro-fsm1",
+    "proc-macro-visit",
 ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -24,3 +25,4 @@ proc-macro-verbatim = { path = "proc-macro-verbatim" }
 proc-macro-expr-binary = { path = "proc-macro-expr-binary" }
 proc-macro-nesting = { path = "proc-macro-nesting" }
 proc-macro-fsm1 = { path = "proc-macro-fsm1" }
+proc-macro-visit = { path = "proc-macro-visit" }
