--- a/proc-macro-expr-struct/Cargo.toml
+++ b/proc-macro-expr-struct/Cargo.toml
@@ -3,11 +3,10 @@ name = "proc-macro-expr-struct"
 version = "0.1.0"
 edition = "2021"
 
-#[lib]
-#proc-macro = true
-#
-#[dependencies]
-#syn = { version = "1.0", features = ["extra-traits", "full"] }
-#quote = "1.0"
-#proc-macro2 = "1.0"
-#
+[lib]
+proc-macro = true
+
+[dependencies]
+syn = { version = "1.0", features = ["extra-traits", "full"] }
+quote = "1.0"
+proc-macro2 = "1.0"
