feat: Rename proc-macro-fsm1 to proc-macro-hsm
Add a tiny bit of documentation in README and lib.rs. One issue I get a
clippy warning of `needless 'fn main' in doctest:

 wink@3900x 22-07-18T22:38:46.121Z:~/prgs/rust/myrepos/exper-proc-macros/proc-macro-fsm1 (main)
 $ cargo clippy
 warning: needless `fn main` in doctest
    --> proc-macro-hsm1/src/lib.rs:171:4
     |
 171 | /// use proc_macro_hsm1::{hsm1, hsm1_state, handled};
     |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = note: `#[warn(clippy::needless_doctest_main)]` on by default
     = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#needless_doctest_main

 warning: needless `fn main` in doctest
    --> proc-macro-hsm1/src/lib.rs:200:4
     |
 200 | /// use proc_macro_hsm1::{hsm1, hsm1_state, handled, not_handled};
     |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#needless_doctest_main

 warning: `proc-macro-hsm1` (lib) generated 2 warnings
 warning: `proc-macro-hsm1` (lib) generated 2 warnings (2 duplicates)
    Finished dev [unoptimized + debuginfo] target(s) in 0.00s

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = [
     "proc-macro-verbatim",
     "proc-macro-expr-binary",
     "proc-macro-nesting",
-    "proc-macro-fsm1",
+    "proc-macro-hsm1",
 ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -23,4 +23,4 @@ proc-macro-derive-using-parse = { path = "proc-macro-derive-using-parse" }
 proc-macro-verbatim = { path = "proc-macro-verbatim" }
 proc-macro-expr-binary = { path = "proc-macro-expr-binary" }
 proc-macro-nesting = { path = "proc-macro-nesting" }
-proc-macro-fsm1 = { path = "proc-macro-fsm1" }
+proc-macro-hsm1 = { path = "proc-macro-hsm1" }
