refactor: Extract StateResult and StateFnsHdl to own crate
I initially tried to create a "local" module but was unsuccessful so
created an external module. Which, ATM, needs to be at ../../sm I'll
change it to be in github later.

--- a/proc-macro-hsm1/Cargo.toml
+++ b/proc-macro-hsm1/Cargo.toml
@@ -11,3 +11,4 @@ syn = { version = "1.0", features = ["extra-traits", "full", "parsing", "visit-m
 quote = "1.0"
 proc-macro2 = "1.0"
 lazy_static = "1.4.0"
+sm = { path = "../../sm" }
